# cicd-foundation

./: .gitignore  README.md  cloudbuild.yaml
apps/: .env.example  README.md
apps/go-hello-world/: skaffold.yaml
apps/hello-world/: skaffold.yaml
apps/java-hello-world/: skaffold.yaml
apps/node-hello-world/: skaffold.yaml
apps/python-hello-world/: skaffold.yaml
apps/python-hello-world/src/python-hello-world/: Procfile  README.md  pyproject.toml  requirements.txt
apps/python-hello-world/src/python-hello-world/hello_world/: app.py
cicd/cloudbuild/: README.md  skaffold+kritis.yaml  skaffold.yaml
cicd/clouddeploy/: README.md
cicd/kritis/: vulnz-signing-policy.yaml
cicd/tekton/: installation.sh
exercises/: README.md
exercises/01_workstation/: README.md  ws.sh
exercises/02_git-config/: README.md
exercises/03_gcloud/: README.md
exercises/03_skaffold/: README.md
exercises/04_skaffold/: README.md
exercises/05_skaffold/: README.md
exercises/E1_git-clone/: README.md
exercises/E1_hello-world/: README.md
exercises/E2_skaffold-dev/: README.md
exercises/E3_git-push/: README.md
exercises/E4_binary_auth/: README.md
infra/: .gitignore  README.md  runtime.tf  variables.tf  workstations.tf
infra/reference/: .terraform.lock.hcl  README.md  apps.tf  backend.tf.example  build.tf  deploy.tf  main.tf  network.tf  providers.tf  runtime.tf  security.tf  source.tf  terraform.tfvars.example  variables.tf  versions.tf  workstations.tf
infra/simplified/: .gitignore  README.md  backend.tf.example  main.tf  outputs.tf  providers.tf  variables.tf  (+2 more)
(+127 files in other folders)
